language/move-lang/tests/move_check/typing/main_call_visibility_friend.exp
error[E04001]: restricted visibility
  ┌─ tests/move_check/typing/main_call_visibility_friend.move:9:5
  │
3 │     public(friend) fun foo() {}
  │     -------------- This function can only be called from a 'friend' of module '0x2::X'
  ·
9 │     0x2::X::foo()
  │     ^^^^^^^^^^^^^ Invalid call to '0x2::X::foo'

